# masker

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  build.bat  pyproject.toml  setup.bat  start.bat
.github/workflows/: publish.yml  test.yml
launchers/: mask_launcher.py  unmask_launcher.py  web_launcher.py
src/pii_masker/: __init__.py  cli.py
src/pii_masker/engine/: date_detector.py  masker.py  ner_detector.py  token_store.py
src/pii_masker/formats/: handler_docx.py  handler_html.py  handler_pdf.py  handler_pptx.py  handler_svg.py  handler_txt.py  handler_xlsx.py
src/pymasking/: __init__.py  cli.py  entry_mask.py  entry_unmask.py  webapp_entry.py
src/pymasking/dict/: custom_dict.txt
src/pymasking/engine/: masker.py  ner_detector.py  rules.py  token_store.py
src/pymasking/formats/: handler_docx.py  handler_html.py  handler_pdf.py  handler_pptx.py  handler_svg.py  handler_txt.py  handler_xlsx.py
tests/: test_masker.py
web/: .gitignore  download_model.py  index.html  python_setup.bat  setup.bat  start.bat  start.sh
web/app/: server.py
web/app/templates/: index.html
web/dict/: custom_dict.txt
web/js/: app.js  date_detector.js  heuristic_ner.js  masker.js  ner_worker.js  rules.js  token_store.js
web/js/handlers/: docx.js  html.js  pptx.js  svg.js  txt.js  xlsx.js
webapp/: requirements.txt  server.py
webapp/exe/: mask_launcher.py  unmask_launcher.py  web_launcher.py
webapp/templates/: index.html
