[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymasking"
version = "1.4.0"
description = "個人情報・機密情報を可逆・一意なトークンにマスキングするオフラインライブラリ"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "kirin123kirin", email = "kirin123kirin@gmail.com" },
]
keywords = [
    "pii", "masking", "anonymization", "privacy", "nlp",
    "個人情報", "マスキング", "匿名化",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Japanese",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"

dependencies = [
    "python-dateutil>=2.9.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "pdfplumber>=0.10.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
# 人名・組織名の高精度NLP検出
nlp = [
    "ginza>=5.2.0",
    "ja-ginza>=5.2.0",
]
# クリップボード操作の強化（なくても動作するが入れると安定）
clipboard = [
    "pyperclip>=1.8.0",
]
dev = [
    "build>=1.0",
    "twine>=5.0",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/kirin123kirin/masker"
Repository = "https://github.com/kirin123kirin/masker"
"Bug Tracker" = "https://github.com/kirin123kirin/masker/issues"

[project.scripts]
mask   = "pymasking.cli:main"
unmask = "pymasking.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pymasking = [
    "dict/*.txt",
    "py.typed",
]
